driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.log
make: Entering directory `/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER'
make -C /lib/modules/3.16.0-41-generic/build M=/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER EXTRA_CFLAGS='-Wall -Werror-implicit-function-declaration' modules
make[1]: Entering directory `/usr/src/linux-headers-3.16.0-41-generic'
test -e include/generated/autoconf.h -a -e include/config/auto.conf || (		\
	echo >&2;							\
	echo >&2 "  ERROR: Kernel configuration is invalid.";		\
	echo >&2 "         include/generated/autoconf.h or include/config/auto.conf are missing.";\
	echo >&2 "         Run 'make oldconfig && make prepare' on kernel src to fix it.";	\
	echo >&2 ;							\
	/bin/false)
mkdir -p /home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/.tmp_versions ; rm -f /home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/.tmp_versions/*
make -f scripts/Makefile.build obj=/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER
  gcc -Wp,-MD,/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/.kfioc_test.o.d  -nostdinc -isystem /usr/lib/gcc/x86_64-linux-gnu/4.8/include  -I./arch/x86/include -Iarch/x86/include/generated  -Iinclude -I./arch/x86/include/uapi -Iarch/x86/include/generated/uapi -I./include/uapi -Iinclude/generated/uapi -include ./include/linux/kconfig.h -Iubuntu/include  -D__KERNEL__ -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs -fno-strict-aliasing -fno-common -Werror-implicit-function-declaration -Wno-format-security -m64 -mno-mmx -mno-sse -mno-80387 -mno-fp-ret-in-387 -mpreferred-stack-boundary=3 -mtune=generic -mno-red-zone -mcmodel=kernel -funit-at-a-time -maccumulate-outgoing-args -DCONFIG_X86_X32_ABI -DCONFIG_AS_CFI=1 -DCONFIG_AS_CFI_SIGNAL_FRAME=1 -DCONFIG_AS_CFI_SECTIONS=1 -DCONFIG_AS_FXSAVEQ=1 -DCONFIG_AS_CRC32=1 -DCONFIG_AS_AVX=1 -DCONFIG_AS_AVX2=1 -pipe -Wno-sign-compare -fno-asynchronous-unwind-tables -mno-sse -mno-mmx -mno-sse2 -mno-3dnow -mno-avx -fno-delete-null-pointer-checks -O2 -Wframe-larger-than=1024 -fstack-protector -Wno-unused-but-set-variable -fno-omit-frame-pointer -fno-optimize-sibling-calls -fno-var-tracking-assignments -pg -mfentry -DCC_USING_FENTRY -Wdeclaration-after-statement -Wno-pointer-sign -fno-strict-overflow -fconserve-stack -Werror=implicit-int -Werror=strict-prototypes -DCC_HAVE_ASM_GOTO -Wall -Werror-implicit-function-declaration  -DMODULE  -D"KBUILD_STR(s)=#s" -D"KBUILD_BASENAME=KBUILD_STR(kfioc_test)"  -D"KBUILD_MODNAME=KBUILD_STR(kfioc_test)" -c -o /home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/.tmp_kfioc_test.o /home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.c
/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.c: In function 'kfioc_test_blk_queue_set_discard':
/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.c:8:2: error: implicit declaration of function 'blk_queue_ordered' [-Werror=implicit-function-declaration]
  (void) blk_queue_ordered(NULL,QUEUE_ORDERED_NONE, NULL);
  ^
/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.c:8:32: error: 'QUEUE_ORDERED_NONE' undeclared (first use in this function)
  (void) blk_queue_ordered(NULL,QUEUE_ORDERED_NONE, NULL);
                                ^
/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.c:8:32: note: each undeclared identifier is reported only once for each function it appears in
/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.c:9:32: error: 'QUEUE_ORDERED_TAG' undeclared (first use in this function)
  (void) blk_queue_ordered(NULL,QUEUE_ORDERED_TAG, NULL);
                                ^
/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.c:10:32: error: 'QUEUE_ORDERED_TAG_FLUSH' undeclared (first use in this function)
  (void) blk_queue_ordered(NULL,QUEUE_ORDERED_TAG_FLUSH, NULL);
                                ^
cc1: some warnings being treated as errors
make[2]: *** [/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER/kfioc_test.o] Error 1
make[1]: *** [_module_/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER] Error 2
make[1]: Leaving directory `/usr/src/linux-headers-3.16.0-41-generic'
make: *** [modules] Error 2
make: Leaving directory `/home/promise/bin/fio/iomemory-vsl-3.2.10.1509/driver_source/kfio_config/KFIOC_BARRIER'
